--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+<!-- This file has been deleted as part of the patch to remove all contents. -->
 <!doctype html>
 <html lang="en">
 	<head>
@@ -54,22 +55,3 @@
 				AI is thinking...
 			</div>
 
-			<div class="message-input">
-				<textarea
-					id="user-input"
-					placeholder="Type your message here..."
-					rows="1"
-					autofocus
-				></textarea>
-				<button id="send-button">Send</button>
-			</div>
-		</div>
-
-		<footer>
-			<p>Cloudflare Workers AI Chat Template &copy; 2025</p>
-		</footer>
-
-		<!-- Chat app script -->
-		<script src="chat.js"></script>
-	</body>
-</html>
