Hide 'Try our AI Chatbot' link on homepage

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section class="hero">
             <h2>Welcome to ChemBioCompAI</h2>
             <p>Curiosity-driven AI solutions for chemistry and biology. Explore, discover, and innovate with us.</p>
-            <a href="placeholder/ai-chatbot.html" class="cta">Try our AI Chatbot</a>
+            <a href="placeholder/ai-chatbot.html" class="cta" style="display:none;">Try our AI Chatbot</a>
         </section>
     </main>
     <footer>
