Update index.html with full company information and sections

--- a/index.html
+++ b/index.html
@@ -20,8 +20,40 @@
     <main>
         <section class="hero">
             <h2>Welcome to ChemBioCompAI</h2>
-            <p>Curiosity-driven AI solutions for chemistry and biology. Explore, discover, and innovate with us.</p>
-            <a href="placeholder/ai-chatbot.html" class="cta" style="display:none;">Try our AI Chatbot</a>
+            <p>Curiosity-driven AI solutions for chemistry and biology. We help organizations explore, discover, and innovate with advanced data analytics, machine learning, and bioinformatics pipelines.</p>
+        </section>
+
+        <section id="services">
+            <h2>Services</h2>
+            <ul>
+                <li>Bioinformatics Pipeline Development</li>
+                <li>Oncology Data Analytics</li>
+                <li>Chemical Engineering Machine Learning</li>
+                <li>AI Variant Annotation Workflows</li>
+                <li>Custom Data Solutions for Healthcare & Life Sciences</li>
+            </ul>
+        </section>
+
+        <section id="portfolio">
+            <h2>Portfolio</h2>
+            <ul>
+                <li><strong>Oncology Data Pipeline:</strong> Dashboard analyzing mutations, pathways, and drug targets using cBioPortal and GDC APIs.</li>
+                <li><strong>AI Variant Annotation Mini-Pipeline:</strong> Reproducible workflow for variant annotation in oncology/genomics using Ensembl VEP, bcftools, and ML classifiers.</li>
+            </ul>
+        </section>
+
+        <section id="about">
+            <h2>About</h2>
+            <p>With over 20 years of experience in healthcare, bioinformatics, and AI, ChemBioCompAI delivers trusted solutions for complex biological and chemical data challenges.<br>
+            Our founder has led projects in oncology analytics, chemical engineering ML, and clinical informatics, helping clients achieve breakthroughs in research and patient care.</p>
+        </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Ready to collaborate or learn more?<br>
+            Email: info@chembiocompai.com<br>
+            Book a meeting: <a href="#">Calendly link</a><br>
+            Connect with us for project inquiries, partnerships, or consultations.</p>
         </section>
     </main>
     <footer>
