Make logo image smaller in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="ChemBioCompAI Logo" class="logo">
+        <img src="images/logo.png" alt="ChemBioCompAI Logo" class="logo" style="width:120px; height:auto;">
         <h1>ChemBioCompAI</h1>
         <nav>
             <a href="index.html">Home</a>
