adjust logo size

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <section class="hero">
-            <h2>Welcome to ChemBioCompAI</h2>
+            <h2>Welcome</h2>
             <p>Curiosity-driven AI solutions for chemistry and biology. We help organizations explore, discover, and innovate with advanced data analytics, machine learning, and bioinformatics pipelines.</p>
         </section>
 
