Update header layout: logo left, company name and navigation centered

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <img src="images/logo.png" alt="ChemBioCompAI Logo" class="logo" style="width:120px; height:auto;">
-        <h1>ChemBioCompAI</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="services.html">Services</a>
-            <a href="contact.html">Contact</a>
-        </nav>
+    <header style="display: flex; align-items: center; justify-content: flex-start; padding: 20px 0;">
+        <img src="images/logo.png" alt="ChemBioCompAI Logo" class="logo" style="width:120px; height:auto; margin-right: 32px;">
+        <div style="flex: 1; text-align: center;">
+            <h1 style="margin: 0;">ChemBioCompAI</h1>
+            <nav style="margin-top: 8px;">
+                <a href="index.html" style="margin: 0 16px;">Home</a>
+                <a href="about.html" style="margin: 0 16px;">About</a>
+                <a href="services.html" style="margin: 0 16px;">Services</a>
+                <a href="contact.html" style="margin: 0 16px;">Contact</a>
+            </nav>
+        </div>
     </header>
     <main>
         <section class="hero">
