--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header style="display: flex; align-items: center; justify-content: flex-start; padding: 20px 0;">
-        <img src="images/logo.png" alt="ChemBioCompAI Logo" class="logo" style="width:120px; height:auto; margin-right: 32px;">
-        <div style="flex: 1; text-align: center;">
-            <h1 style="margin: 0;">ChemBioCompAI</h1>
-            <nav style="margin-top: 8px;">
-                <a href="index.html" style="margin: 0 16px;">Home</a>
-                <a href="about.html" style="margin: 0 16px;">About</a>
-                <a href="services.html" style="margin: 0 16px;">Services</a>
-                <a href="contact.html" style="margin: 0 16px;">Contact</a>
-            </nav>
+    <header class="main-header">
+        <div class="header-content">
+            <img src="images/logo.png" alt="ChemBioCompAI Logo" class="logo">
+            <div class="header-center">
+                <h1>ChemBioCompAI</h1>
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="services.html">Services</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
+            </div>
         </div>
     </header>
     <main>
