switch logo to right

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <header class="main-header">
-        <div class="header-content">
-            <img src="images/logo.png" alt="ChemBioCompAI Logo" class="logo">
-            <div class="header-center">
+        <div class="header-content">           
+            <div class="header-left">
                 <h1>ChemBioCompAI</h1>
                 <nav>
                     <a href="index.html">Home</a>
@@ -19,6 +18,7 @@
                     <a href="contact.html">Contact</a>
                 </nav>
             </div>
+            <img src="images/logo.png" alt="ChemBioCompAI Logo" class="logo">
         </div>
     </header>
     <main>
