--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                     <a href="contact.html">Contact</a>
                 </nav>
             </div>
-            <img src="images/logo.png" alt="ChemBioCompAI Logo" class="logo">
         </div>
+        <img src="images/logo.png" alt="ChemBioCompAI Logo" class="logo logo-top-right">
     </header>
     <main>
         <section class="hero">
