--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </nav>
             </div>
         </div>
-        <img src="images/logo.png" alt="ChemBioCompAI Logo" class="logo logo-top-right">
+        <img src="images/logo.png" alt="ChemBioCompAI Logo" class="logo logo-top-right" style="width:32px; height:32px; object-fit:contain;">
     </header>
     <main>
         <section class="hero">
