update contact email

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section id="contact">
             <h2>Contact</h2>
             <p>Ready to collaborate or learn more?<br>
-            Email: info@chembiocompai.com<br>
+            Email: xlzhang@chembiocompai.com<br>
             Book a meeting: <a href="#">Calendly link</a><br>
             Connect with us for project inquiries, partnerships, or consultations.</p>
         </section>
