--- a/index.html
+++ b/index.html
@@ -7,8 +7,20 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <img src="images/logo.png" alt="ChemBioCompAI Logo" class="logo logo-top-right" style="width:32px; height:32px; object-fit:contain;">
     <header class="main-header">
+        <div class="header-content">
+            <div class="header-left">
+                <h1>ChemBioCompAI</h1>
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="services.html">Services</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
+            </div>
+            <img src="images/logo.png" alt="ChemBioCompAI Logo" class="logo logo-top-right" style="width:100px; height:64px; object-fit:contain;">
+        </div>
+    </header>
         <div class="header-content">
             <div class="header-left">
                 <h1>ChemBioCompAI</h1>
