--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header class="main-header">
-        <div class="header-content">
-            <div class="header-left">
-                <h1>ChemBioCompAI</h1>
+        <div class="header-content" style="display: flex; align-items: center; justify-content: space-between; max-width: 900px; margin: 0 auto;">
+            <div class="header-left" style="display: flex; align-items: center;">
+                <h1 style="margin: 0 24px 0 0;">ChemBioCompAI</h1>
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="about.html">About</a>
@@ -18,19 +18,7 @@
                     <a href="contact.html">Contact</a>
                 </nav>
             </div>
-            <img src="images/logo.png" alt="ChemBioCompAI Logo" class="logo logo-top-right" style="width:100px; height:64px; object-fit:contain;">
-        </div>
-    </header>
-        <div class="header-content">
-            <div class="header-left">
-                <h1>ChemBioCompAI</h1>
-                <nav>
-                    <a href="index.html">Home</a>
-                    <a href="about.html">About</a>
-                    <a href="services.html">Services</a>
-                    <a href="contact.html">Contact</a>
-                </nav>
-            </div>
+            <img src="images/logo.png" alt="ChemBioCompAI Logo" class="logo" style="width:96px; height:96px; object-fit:contain;">
         </div>
     </header>
     <main>
