--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a href="contact.html">Contact</a>
                 </nav>
             </div>
-            <img src="images/logo.png" alt="ChemBioCompAI Logo" class="logo" style="width:96px; height:96px; object-fit:contain;">
+            <img src="images/logo.png" alt="ChemBioCompAI Logo" class="logo">
         </div>
     </header>
     <main>
