--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="header-content" style="display: flex; align-items: center; justify-content: space-between; max-width: 900px; margin: 0 auto;">
             <div class="header-left" style="display: flex; align-items: center;">
                 <h1 style="margin: 0 24px 0 0;">ChemBioCompAI</h1>
-                <nav>
+                <nav style="margin-top: 0;">
                     <a href="index.html">Home</a>
                     <a href="about.html">About</a>
                     <a href="services.html">Services</a>
