Fix header: left-align company/nav, logo right, nav below title, clean CSS

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header class="main-header">
-        <div class="header-content" style="display: flex; align-items: center; justify-content: space-between; max-width: 900px; margin: 0 auto;">
-            <div class="header-left" style="display: flex; align-items: center;">
-                <h1 style="margin: 0 24px 0 0;">ChemBioCompAI</h1>
-                <nav style="margin-top: 0;">
+        <div class="header-content">
+            <div class="header-left">
+                <h1>ChemBioCompAI</h1>
+                <nav>
                     <a href="index.html">Home</a>
                     <a href="about.html">About</a>
                     <a href="services.html">Services</a>
