Header update: remove company name, show large logo at top

--- a/index.html
+++ b/index.html
@@ -7,19 +7,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="main-header">
-        <div class="header-content">
-            <div class="header-left">
-                <h1>ChemBioCompAI</h1>
-                <nav>
-                    <a href="index.html">Home</a>
-                    <a href="about.html">About</a>
-                    <a href="services.html">Services</a>
-                    <a href="contact.html">Contact</a>
-                </nav>
-            </div>
-            <img src="images/logo.png" alt="ChemBioCompAI Logo" class="logo" style="width: 24px; height: 16px;">
-        </div>
+    <header class="main-header" style="text-align: center;">
+        <img src="images/logo.png" alt="ChemBioCompAI Logo" style="width: 120px; height: 80px; display: block; margin: 0 auto 0.5em auto;">
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="services.html">Services</a>
+            <a href="contact.html">Contact</a>
+        </nav>
     </header>
     <main>
         <section class="hero">
