Header: remove company name, large logo at top, navigation below

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="main-header" style="text-align: center;">
-        <img src="images/logo.png" alt="ChemBioCompAI Logo" style="width: 120px; height: 80px; display: block; margin: 0 auto 0.5em auto;">
-        <nav>
+    <header class="main-header" style="text-align: center; padding-top: 2.5rem;">
+        <img src="images/logo.png" alt="ChemBioCompAI Logo" style="width: 240px; height: 160px; display: block; margin: 0 auto 1em auto;">
+        <nav style="margin-bottom: 0.5em;">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="services.html">Services</a>
