Header: left-align and enlarge logo and navigation

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="main-header" style="text-align: center; padding-top: 2.5rem;">
-        <img src="images/logo.png" alt="ChemBioCompAI Logo" style="width: 240px; height: 160px; display: block; margin: 0 auto 1em auto;">
-        <nav style="margin-bottom: 0.5em;">
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="services.html">Services</a>
-            <a href="contact.html">Contact</a>
-        </nav>
+    <header class="main-header" style="padding-top: 2.5rem;">
+        <div style="display: flex; flex-direction: column; align-items: flex-start; padding-left: 2.5rem;">
+            <img src="images/logo.png" alt="ChemBioCompAI Logo" style="width: 340px; height: 220px; display: block; margin-bottom: 1em;">
+            <nav style="margin-bottom: 0.5em;">
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="services.html">Services</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </div>
     </header>
     <main>
         <section class="hero">
