--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="main-header" style="padding-top: 2.5rem;">
-        <div style="display: flex; flex-direction: column; align-items: flex-start; padding-left: 2.5rem;">
-            <img src="images/logo.png" alt="ChemBioCompAI Logo" style="width: 340px; height: 220px; display: block; margin-bottom: 1em;">
-            <nav style="margin-bottom: 0.5em;">
+    <header class="main-header" style="padding-top: 2.5rem; text-align: left;">
+        <div style="display: flex; flex-direction: column; align-items: flex-start; padding-left: 2.5rem; width: auto;">
+            <img src="images/logo.png" alt="ChemBioCompAI Logo" style="width: 340px; height: 220px; display: block; margin-bottom: 1em; margin-left: 0;">
+            <nav style="margin-bottom: 0.5em; margin-left: 0;">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="services.html">Services</a>
